datacollection.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: datacollection
spec:
  replicas: 2
  selector:
    matchLabels:
      app: datacollection
  template:
    metadata:
      labels:
        app: datacollection
    spec:
      containers:
      - name: datacollection
        image: raficp/datacollection:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: datacollection-service
spec:
  selector:
    app: datacollection
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: LoadBalancer
