ingresstest.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-server-v1
  labels:
    version: v1
spec:
  selector:
    matchLabels:
      app: echo-server
      version: v1
  replicas: 2
  template:
    metadata:
      labels:
        app: echo-server
        version: v1
    spec:
      containers:
      - name: echo-server
        image: k8s.gcr.io/echoserver:1.4
---
apiVersion: v1
kind: Service
metadata:
  name: echo-server-v1
  labels:
    version: v1
spec:
  type: ClusterIP
  ports:
  - name: echo-port
    port: 80
    targetPort: 8080
  selector:
    app: echo-server
    version: v1
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: echo-v1-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /echo-v1
        backend:
          serviceName: echo-server-v1
          servicePort: 80
