rafideployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: remotemonitoring
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: remotemonitoring
  name: datacollection-deploy
  labels:
    name: datacollection-deploy
    app.kubernetes.io/name: remotedata-app
spec:
  replicas: 3
  selector:
    matchLabels:
      name: datacollection-pod
      app.kubernetes.io/name: remotedata-app
  template:
    metadata:
      name: datacollection-pod
      labels:
        name: datacollection-pod
        app.kubernetes.io/name: remotedata-app
    spec:
      containers:
      - name: datacollection
        image: raficp/datacollection:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  namespace: remotemonitoring
  name: datacollection-service
  labels:
    name: datacollection-service
    app.kubernetes.io/name: remotedata-app
spec:
  selector:
    name: datacollection-pod
    app.kubernetes.io/name: remotedata-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: remotemonitoring
  name: dataview-deploy
  labels:
    name: dataview-deploy
    app.kubernetes.io/name: remotedata-app
spec:
  replicas: 2
  selector:
    matchLabels:
      name: dataview-pod
      app.kubernetes.io/name: remotedata-app
  template:
    metadata:
      name: dataview-pod
      labels:
        name: dataview-pod
        app.kubernetes.io/name: remotedata-app
    spec:
      containers:
      - name: dataview
        image: raficp/dataview:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  namespace: remotemonitoring
  name: dataview-service
  labels:
    name: dataview-service
    app.kubernetes.io/name: remotedata-app
spec:
  selector:
    name: dataview-pod
    app.kubernetes.io/name: remotedata-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: NodePort
  
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: remotemonitoring
  name: product-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/subnets: subnet-a, subnet-b, subnet-c
spec:
  ingressClassName: alb
  rules:
    - host: 
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dataview-service
                port:
                  number: 8080
